<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>topic_monitor</name>
  <version>0.20.0</version>
  <description>Package containing tools for monitoring ROS 2 topics.</description>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac Saito</maintainer>
  <license>Apache License 2.0</license>

  <author>D. Hood</author>
  <author email="mabel@openrobotics.org">Mabel Zhang</author>
  <author email="scott@openrobotics.org">Scott K Logan</author>
  <author email="audrow@openrobotics.org">Audrow Nash</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
  <author email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python3-colcon-common-extensions</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>  <!-- For 18.04/melodic this. For 20.04 this needs to be py3 ver. -->
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>
</package>
